tests/NormalTests/paczka1/small_fuzzy/96152633.err
Error in line 12: nthavcVoB A479 82,0
Error in line 4: sKVyMNqaf A303 73,3
